05-players/player02/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-player02
  labels:
     app: players
     site: campus
