05-players/player02/02-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-player02
  namespace: ns-player02
  labels:
    app: player02
spec:
  replicas: 3
  selector:
    matchLabels:
      app: player02
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: player02
    spec:
      containers:
      - name: web-example
        image: stefanprodan/podinfo
        ports:
        - containerPort: 9898
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: svc-player02
  namespace: ns-player02
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9898
  selector:
    app: player02
