05-players/player02/03-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-player02
  namespace: ns-player02
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:  
  rules:
    - host: player02.randco.eu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-player02
              port:
                number: 80
