05-players/player02/04-networkpolicy.yaml

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: player02-microseg
  namespace: ns-player02
spec:
  podSelector:
    matchLabels:
      app: player02
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: monitoring
      namespaceSelector: {}
    - namespaceSelector:
         matchLabels:
          app: players
    ports:
    - protocol: TCP
      port: 80
